# salt-ext-modules-vmware

./: README.md  setup.cfg
src/saltext/vmware/modules/: datacenter.py  datastore.py  dvportgroup.py  esxi.py  vm.py  vsphere.py
src/saltext/vmware/utils/: common.py  vm.py  vsphere.py
